# template_wasm_cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  index.html  index.js
js/: index.js
js/wasm/: index.js
scripts/: index.js
src/: index.html
src/cpp/: Makefile  demo.cpp
src/css/: index.css
src/js/: header.js  index.js
src/js/about/: index.html  index.js
src/js/footer/: index.html  index.js
src/js/header/: index.html  index.js
src/js/home/: index.html  index.js
ui/: CMakeLists.txt  index.html
ui/css/: index.css
ui/js/: footer.js  index.js
ui/js/home/: index.js
ui/js/wasm/: index.js
ui/styles/: index.css
wasm/: CMakeLists.txt  Makefile  demo.h  web_api.cpp  web_api.js  web_api.wasm
